data/derived/comb/progs/unify/prog4248.ml.out
Characters 32-33:
  ,b);;
   ^
Error: This expression has type 'a -> 'a * bool
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'a * bool
